--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,7 +87,7 @@
             <div class="section-title">
                 <h2>Hanoi lottery results</h2>
                 <p style="color: #084d22;">ผลรางวัลหวยฮานอย gold</p>
-                <span th:text="${#dates.format(todayLotteryPrize.getDrawDate(), 'งวดประจำวันที่ dd MMMM yyyy')}"></span>
+                <span th:text="${#dates.format(today, 'งวดประจำวันที่ dd MMMM yyyy')}"></span>
             </div>
 
             <div class="row">
